Use newer unmodifiable collection builders
They came in in Java 9, and simplify quite a few places