@@ -20,8 +20,8 @@ import static com.fasterxml.jackson.databind.PropertyNamingStrategies.SNAKE_CASE
 import static com.fasterxml.jackson.databind.SerializationFeature.WRITE_DATES_AS_TIMESTAMPS;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import org.json.JSONException;
 import org.junit.jupiter.api.Nested;
@@ -76,9 +76,9 @@ class JsonTest {
 		void testJobMachineInfo() throws IOException, JSONException {
 			var r = new JobMachineInfo();
 			r.setMachineName("gorp");
-			r.setBoards(Arrays.asList(new BoardCoordinates(0, 1, 2)));
-			r.setConnections(Arrays
-					.asList(new Connection(new ChipLocation(0, 0), "foo.bar")));
+			r.setBoards(List.of(new BoardCoordinates(0, 1, 2)));
+			r.setConnections(
+					List.of(new Connection(new ChipLocation(0, 0), "foo.bar")));
 			JSONAssert.assertEquals(
 					"{ 'boards': [[0,1,2]], "
 							+ "'connections': [[[0,0],'foo.bar']], "
@@ -112,8 +112,8 @@ class JsonTest {
 			var r = new JobDescription[1];
 			r[0] = new JobDescription();
 			r[0].setJobID(1);
-			r[0].setArgs(Arrays.asList(0));
-			r[0].setKwargs(new HashMap<>());
+			r[0].setArgs(List.of(0));
+			r[0].setKwargs(Map.of());
 			r[0].setKeepAlive(123);
 			r[0].setKeepAliveHost("127.0.0.1");
 			r[0].setMachine("foo");
@@ -143,7 +143,7 @@ class JsonTest {
 			var r = new Machine[1];
 			r[0] = new Machine();
 			r[0].setName("gorp");
-			r[0].setTags(Arrays.asList("foo", "bar"));
+			r[0].setTags(List.of("foo", "bar"));
 			JSONAssert
 					.assertEquals(
 							"[{ 'name': 'gorp', 'tags': ['foo', 'bar'], "
